--- a/tasks/install-pre5.yml
+++ b/tasks/install-pre5.yml
@@ -4,16 +4,16 @@
   stat: "path={{ solr_install_path }}/dist/{{ solr_filename }}.war"
   register: solr_war_file
 
-- name: Copy Solr into place.
-  command: "cp -r {{ solr_workspace }}/{{ solr_filename }} {{ solr_install_path }}"
-  when: not solr_war_file.stat.exists
-
 - name: Ensure Solr install files are owned by the solr_user.
   file:
-    path: "{{ solr_install_path }}"
+    path: "{{ solr_workspace }}"
     owner: "{{ solr_user }}"
     group: "{{ solr_user }}"
     recurse: yes
+  when: not solr_war_file.stat.exists
+
+- name: Copy Solr into place.
+  command: "cp -r {{ solr_workspace }}/{{ solr_filename }} {{ solr_install_path }}"
   when: not solr_war_file.stat.exists
 
 # Set up solr_home.
