--- a/tasks/repli.yml
+++ b/tasks/repli.yml
@@ -4,6 +4,6 @@
     src: solrconfig.xml.j2
     dest: "{{ solr_home }}/data/{{ item }}/conf/solrconfig.xml"
     mode: 0755
-    with_items:
-       - "{{ solr_cores }}"
-    tags: solr_repli
+  with_items:
+     - "{{ solr_cores }}"
+  tags: repli
